Project Vitals_Journal {
  database_type: "PostgreSQL"
}

/* =========================
   users
   - 실제 구현: email은 deleted_at IS NULL 조건으로 partial unique
   - dbdiagram 시각화 목적: unique로 단순화
========================= */
Table users {
  id bigserial [pk]
  email varchar(320) [not null, unique] /* 실제론 UNIQUE WHERE deleted_at IS NULL */
  hashed_password varchar(255) [not null]
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

/* =========================
   health_record
   - users(1) : health_record(N)
========================= */
Table health_record {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]

  type varchar(16) [not null] /* CHECK (type IN ('HR','BP')) */
  measured_at timestamptz [not null]

  /* HR */
  bpm smallint

  /* BP */
  systolic smallint
  diastolic smallint

  memo text

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  /* 권장 CHECK(DDL):
     - type='HR'면 bpm만 존재, type='BP'면 systolic/diastolic만 존재
     - systolic > diastolic (둘 다 존재할 때)
  */
}

/* =========================
   alert
   - health_record(1) : alert(0..1)
   - 핵심: alert는 record 없이 존재하면 안 됨 => NOT NULL
   - 핵심: record당 alert 최대 1개 => UNIQUE
========================= */
Table alert {
  id bigserial [pk]
  health_record_id bigint [not null, unique, ref: - health_record.id]
  is_silent boolean [not null, default: false]
  read_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  /* 실제 구현은 partial unique:
     UNIQUE (health_record_id) WHERE deleted_at IS NULL
     dbdiagram은 partial을 제대로 시각화 못해서 unique로 단순화
  */
}

/* =========================
   threshold
   - users(1) : threshold(N)
========================= */
Table threshold {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]

  metric varchar(16) [not null]     /* HR / BP_SYS / BP_DIA */
  rule_type varchar(16) [not null]  /* MVP: range 중심 */

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  /* 실제 구현 권장:
     UNIQUE (user_id, metric, rule_type) WHERE deleted_at IS NULL
  */
}

/* =========================
   threshold_range
   - threshold(1) : threshold_range(0..1)
   - 핵심: threshold_id가 PK => 한 threshold당 최대 1개
========================= */
Table threshold_range {
  threshold_id bigint [pk, ref: - threshold.id] /* FK는 아래 Ref에서 1:1로 연결 */
  min_value numeric(10,2)
  max_value numeric(10,2)

  /* 실제 CHECK(DDL):
     (min_value IS NULL OR max_value IS NULL OR min_value < max_value)
  */
}

/* =========================
   record_violation
   - health_record(1) : record_violation(N)
   - threshold(1)     : record_violation(N)
========================= */
Table record_violation {
  id bigserial [pk]

  health_record_id bigint [not null, ref: > health_record.id]
  threshold_id bigint [not null, ref: > threshold.id]

  metric varchar(16) [not null]     /* HR / BP_SYS / BP_DIA */
  rule_type varchar(16) [not null]  /* range 중심 */
  measured_value numeric(10,2) [not null]
  direction varchar(16)             /* below_min / above_max / out_of_range */

  evaluated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  /* 실제 구현 권장:
     UNIQUE (health_record_id, threshold_id) WHERE deleted_at IS NULL
  */
}

/* =========================
   refresh_token
========================= */
Table refresh_token {
  id bigserial [pk]
  user_id bigint [not null, ref: > users.id]

  token_hash varchar(255) [not null, unique] /* 원문 저장 금지 */
  issued_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  /* 실제 구현 인덱스(DDL):
     - INDEX (user_id, expires_at DESC) WHERE revoked_at IS NULL
     - INDEX (expires_at) WHERE revoked_at IS NULL
  */
}